[gd_scene load_steps=7 format=3 uid="uid://0uxjhl4aepuv"]

[ext_resource type="Script" uid="uid://2862eqk74hrr" path="res://scene/tower/snipe_tower.gd" id="1_udk5d"]
[ext_resource type="Texture2D" uid="uid://b838skivqx4yl" path="res://scene/Snipe_tower/Turrets_g41.png" id="2_udk5d"]
[ext_resource type="Texture2D" uid="uid://b35682nssh1rb" path="res://scene/Snipe_tower/Turrets_g40.png" id="3_lujke"]

[sub_resource type="SpriteFrames" id="SpriteFrames_58b7d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_udk5d")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_lujke")
}, {
"duration": 1.0,
"texture": ExtResource("2_udk5d")
}],
"loop": true,
"name": &"shoot",
"speed": 1.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptvpv"]
size = Vector2(10, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_df2s1"]
radius = 2037.17

[node name="BlueTower" type="StaticBody2D" groups=["Tower"]]
z_index = 5
rotation = 1.5708
collision_layer = 5
input_pickable = true
script = ExtResource("1_udk5d")
fire_interval = 0.7
bullet_damage = 300
detector_path = NodePath("Tower")
muzzle_path = NodePath("Muzzle")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.011832, 0.0214193)
rotation = 1.57079
scale = Vector2(0.127155, 0.084711)
sprite_frames = SubResource("SpriteFrames_58b7d")
animation = &"shoot"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ptvpv")

[node name="Area" type="Marker2D" parent="."]
position = Vector2(8, -9.53674e-07)

[node name="Tower" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower" groups=["Tower"]]
shape = SubResource("CircleShape2D_df2s1")

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2(17, -6.15398e-05)

[connection signal="body_entered" from="Tower" to="." method="_on_tower_body_entered"]
[connection signal="body_exited" from="Tower" to="." method="_on_tower_body_exited"]
